FIX Align logo to top

--- a/static/css/Experimental/style2.css
+++ b/static/css/Experimental/style2.css
@@ -274,6 +274,7 @@ PRIMARY-HEADER
   display: flex;
   align-items: center;
   justify-content: space-between;
+  align-items: start;
 }
 
 /* LOGO */
